--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,14 +16,18 @@ jobs:
       - name: Pull submodules
         run: git submodule update --init --recursive
 
-      - name: Build OpenedX
-        run: docker build . --file ./Dockerfile --tag eoluchile/edx-staging:${GITHUB_SHA} --tag eoluchile/edx-staging:latest
+      - name: Build Open edX
+        run: docker build . --file ./Dockerfile --tag eoluchile/edx-staging:${GITHUB_SHA} --tag eoluchile/edx-staging:latest --target base
+
+      - name: Build Open edX Testing version
+        run: docker build . --file ./Dockerfile --tag eoluchile/edx-staging:testing --target testing
 
       - name: Push
         run: |
           echo "${DOCKERHUB_PASSWORD}" | docker login --username ${DOCKERHUB_USER} --password-stdin
           docker push eoluchile/edx-staging:${GITHUB_SHA}
           docker push eoluchile/edx-staging:latest
+          docker push eoluchile/edx-staging:testing
         env:
           DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USER }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
