Adding the ported eduonline theme

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "themes/eol-uchile-2020"]
 	path = themes/eol-uchile-2020
 	url = https://github.com/matiassalinas/eol-uchile-theme
+[submodule "themes/eduonline-ing"]
+	path = themes/eduonline-ing
+	url = https://github.com/eol-uchile/eol_eduonline_ing_theme
