uabierta theme juniper

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "themes/eduonline-ing"]
 	path = themes/eduonline-ing
 	url = https://github.com/eol-uchile/eol_eduonline_ing_theme
+[submodule "themes/edx-uabierta"]
+	path = themes/edx-uabierta
+	url = https://github.com/eol-uchile/uabierta-theme
